HELL-399: Fixed styling issues for shop grid and products where information was being cut off. Enforced aspect ratio

--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,13 +1,14 @@
 $hellenicblue: rgb(0, 140, 255);
 
 .product-container {
+    aspect-ratio: 2/ 3;
     background-color: #FFFFFF;
     border: 1px solid #cccccc;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 22vw;
+    width: 100%;
     overflow: hidden;
     transition: box-shadow 0.6s ease;
 
@@ -69,6 +70,7 @@ $hellenicblue: rgb(0, 140, 255);
     .price-container {
         display: flex;
         align-self: flex-start;
+        flex-wrap: wrap;
 
         p {
             width: auto;
